--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -35,3 +35,8 @@ Resources:
       Tags:
         - Key: Name
           Value: !Sub backend-${ID}
+
+Outputs:
+  EC2InstanceIP:
+    Value: !GetAtt EC2Instance.PublicIp
+    Description: Public IP of instance
