--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,14 +4,15 @@ commands:
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     parameters:
-      stack-name:
+      workflow-id:
         type: string
     steps:
       - run:
           name: Destroy environments
           when: on_fail
           command: |
-            aws cloudformation delete-stack --stack-name parameters.stack-name
+            aws cloudformation delete-stack --stack-name "udapeople-backend-<< parameters.workflow-id >>"
+            aws cloudformation delete-stack --stack-name "udapeople-frontend-<< parameters.workflow-id >>"
 
 jobs:
   build-frontend:
@@ -144,12 +145,7 @@ jobs:
             - project/.circleci/ansible/inventory.txt
       
       - destroy-environment:
-          stack-name: 
-            - run: echo "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}"
-        
-      - destroy-environment:
-          stack-name:
-            - run: echo "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}"
+          workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}
 
 workflows:
   default:
