--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,17 @@ commands:
             aws cloudformation delete-stack --stack-name "udapeople-backend-<< parameters.workflow-id >>"
             aws cloudformation delete-stack --stack-name "udapeople-frontend-<< parameters.workflow-id >>"
 
+node_image: &node_image
+  docker:
+    - image: circleci/node:13.8.0
+
+aws_cli: &aws_cli
+  docker:
+    - image: amazon/aws-cli
+
 jobs:
   build-frontend:
-    docker:
-      - image: circleci/node:13.8.0
+    <<: *node_image
     steps:
       - checkout
       - restore_cache:
@@ -33,8 +40,7 @@ jobs:
           key: frontend-build
 
   build-backend:
-    docker:
-      - image: circleci/node:13.8.0
+    <<: *node_image
     steps:
       - checkout
       - restore_cache:
@@ -50,8 +56,7 @@ jobs:
           key: backend-build
 
   test-frontend:
-    docker:
-      - image: circleci/node:13.8.0
+    <<: *node_image
     steps:
       - checkout
       - restore_cache:
@@ -64,8 +69,7 @@ jobs:
             npm run test
                 
   test-backend:
-    docker:
-      - image: circleci/node:13.8.0
+    <<: *node_image
     steps:
       - checkout
       - restore_cache:
@@ -78,8 +82,7 @@ jobs:
             npm run test
 
   scan-frontend:
-    docker:
-      - image: circleci/node:13.8.0
+    <<: *node_image
     steps:
       - checkout
       - restore_cache:
@@ -93,8 +96,7 @@ jobs:
             npm audit --audit-level=critical
 
   scan-backend:
-    docker:
-      - image: circleci/node:13.8.0
+    <<: *node_image
     steps:
       - checkout
       - restore_cache:
@@ -109,8 +111,7 @@ jobs:
             npm audit --audit-level=critical
 
   deploy-infrastructure:
-    docker:
-      - image: amazon/aws-cli:2.0.6
+    <<: *aws_cli
     steps:
       - checkout
       - run:
@@ -152,18 +153,17 @@ jobs:
           workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   configure-infrastructure:
-    docker:
-      - image: amazon/aws-cli:2.0.6
+    <<: *aws_cli
     steps:
       - checkout
       - add_ssh_keys:
           fingerprints: ["a1:da:26:0a:ca:7a:2b:10:77:5c:bd:0b:f5:75:17:e1"]
-      - attach_workspace:
-          at: ~/
       - run:
           name: Install dependencies
           command: |
             yum install -y tar gzip ansible
+      - attach_workspace:
+          at: ~/
       - run:
           name: Configure server
           command: |
