--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,7 +170,27 @@ jobs:
             cd .circleci/ansible \
             ansible-playbook -i inventory.txt configure-server.yml
       - destroy-environment:
-          workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}       
+          workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}   
+
+  run-migrations:
+    <<: *node_image
+    steps:
+      - checkout
+      - run:
+          name: Run migrations
+          command: |
+            cd backend
+            npm install
+            npm run migrations > migrations_dump.txt
+      - run:
+          name: Send migration results to memstash
+          command: |
+            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+            then
+                curl https://kvdb.io/XqYHyaz77JvbWZ33V6PM5F/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
+            fi
+      - destroy-environment:
+          workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}   
 
 workflows:
   default:
