--- a/.circleci/config-sample.yml
+++ b/.circleci/config-sample.yml
@@ -158,8 +158,10 @@ jobs:
       - run:
           name: Run migrations
           command: |
-            # Your code here
-            exit 1
+            cd backend
+     npm install
+     # Run and save the migration output
+     npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to memstash
           command: |
