--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -27,7 +27,7 @@
 
   - name: "start server"
     become: true
-    command: node main.js
+    command: pm2 start ./main.js
     args:
       chdir: /home/ubuntu/backend/dist
     environment:
