--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -287,10 +287,10 @@ jobs:
             echo "Contents  of the inventory.txt file is -------"
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
-      #- destroy-environment:
-      #    workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}
-      #- revert-migrations:
-      #    workflow-id: ${CIRCLE_WORKFLOW_ID:0:7} 
+      - destroy-environment:
+          workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations:
+          workflow-id: ${CIRCLE_WORKFLOW_ID:0:7} 
 
   smoke-test:
     <<: *alpine 
