--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -327,10 +327,10 @@ jobs:
             else
               return 1
             fi
-      - destroy-environment:
-          workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}
-      - revert-migrations:
-          workflow-id: ${CIRCLE_WORKFLOW_ID:0:7} 
+      #- destroy-environment:
+      #    workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}
+      #- revert-migrations:
+      #    workflow-id: ${CIRCLE_WORKFLOW_ID:0:7} 
 
 workflows:
   default:
