--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -20,7 +20,7 @@
   - name: "stop existing apps"
     become: true
     command: |
-      pm2 stop default
+      pm2 stop all
       pm2 delete all
     ignore_errors: true
 
@@ -41,4 +41,8 @@
       - TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
       - TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS')}}"
       - TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
+
+  - name: "wait server start"
+    command: |
+      sleep 30
 
