--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -342,12 +342,19 @@ jobs:
             apk add --update curl nodejs npm
             pip install awscli
       - run:
+          name: persist oldworkflow id to KVdb
+          command: |
+            export OldWorkflowID=$(aws cloudformation \
+            list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+            --no-paginate --output text)
+            curl --insecure https://kvdb.io/XqYHyaz77JvbWZ33V6PM5F/OldWorkflowID -d "${OldWorkflowID}"
+      - run:
           name: Update cloudfront distribution
           command: |
             aws cloudformation deploy \
               --template-file .circleci/files/cloudfront.yml \
               --stack-name InitialStack \
-              --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
               --tags project=udapeople
       - destroy-environment:
           workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}
@@ -361,9 +368,7 @@ jobs:
       - run:
           name: Get old stack workflow id
           command: |
-            export OldWorkflowID=$(aws cloudformation \
-              list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-              --no-paginate --output text)
+            export OldWorkflowID=$(curl --insecure https://kvdb.io/XqYHyaz77JvbWZ33V6PM5F/OldWorkflowID)
       - run:
           name: Remove old stacks and files
           command: |
